Projects now wrap in Expore and MyProjects, fix up spacing

--- a/client/src/utilities.css
+++ b/client/src/utilities.css
@@ -31,6 +31,8 @@
   --m: 16px;
   --l: 24px;
   --xl: 32px;
+  --xxl: 40px;
+  --xxxl: 40px;
 }
 
 body {
